--- a/Warm_up_03_variables_and_expressions.ipynb
+++ b/Warm_up_03_variables_and_expressions.ipynb
@@ -55,7 +55,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "7**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +260,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "TEP4290_V2026",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -271,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.12.12"
   },
   "orig_nbformat": 2
  },
