Added solution WU7

--- a/Warm_up_05_function_definitions.ipynb
+++ b/Warm_up_05_function_definitions.ipynb
@@ -9,7 +9,7 @@
     "- PY4E: https://www.py4e.com/lessons/functions#\n",
     "- Whirwind tour of python: https://jakevdp.github.io/WhirlwindTourOfPython/08-defining-functions.html\n",
     "\n",
-    "You will perform some basic operations that are designed to help you get comforable with functions in Python. The exercise is pass/fail and contributes to the required 8/12 warm-ups you need to pass.\n",
+    "You will perform some basic operations that are designed to help you get comforable with functions in Python.\n",
     "\n",
     "Good luck!"
    ]
