--- a/Warm_up_11_OOP.ipynb
+++ b/Warm_up_11_OOP.ipynb
@@ -10,7 +10,7 @@
     "- the python for everyone classes (video 1 and 2 for the mandatory part, 3 and 4 optionally) https://www.py4e.com/lessons/Objects\n",
     "- notebook for advanced content: https://www.nbshare.io/notebook/986482930/Object-Oriented-Programming-In-Python/#Python-Classes\n",
     "\n",
-    "You will demonstrate some understanding of objects in teh mandatory part and to some light coding in the optional part of the assignment. The exercise is pass/fail (only the mandatory part is considered).\n",
+    "You will demonstrate some understanding of objects in the mandatory part and to some light coding in the optional part of the assignment. The exercise is pass/fail (only the mandatory part is considered).\n",
     "\n",
     "Good luck!"
    ]
