--- a/Warm_up_08_Intro_to_NumPy.ipynb
+++ b/Warm_up_08_Intro_to_NumPy.ipynb
@@ -69,7 +69,9 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,17 +100,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 7])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 7]\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(np.array([0, 0, 7]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,22 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "test_array = np.array([[1, 2, 3],[4, 5, 6]])\n",
+    "print(test_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,21 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2, 3)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(np.shape(test_array))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,22 +170,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([4. , 5. , 6. , 1. , 2. , 3. , 7. , 3.5, 8. , 9. ])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.  5.  6.  1.  2.  3.  7.  3.5 8.  9. ]\n"
+     ]
     }
    ],
    "source": [
-    "sw = [4,5,6,1,2,3,7,3.5,8,9]\n"
+    "sw = [4,5,6,1,2,3,7,3.5,8,9]\n",
+    "sw_array = np.array(sw)\n",
+    "print(sw_array)\n"
    ]
   },
   {
@@ -199,26 +198,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[[0.39472062, 0.50407429],\n",
-       "        [0.79164941, 0.79945563]],\n",
-       "\n",
-       "       [[0.56698629, 0.60816968],\n",
-       "        [0.46284873, 0.70618395]]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0.]\n",
+      "  [0. 0.]]\n",
+      "\n",
+      " [[0. 0.]\n",
+      "  [0. 0.]]]\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "\n",
+    "test_array_3d = np.zeros((2,2,2))\n",
+    "print(test_array_3d)"
    ]
   },
   {
@@ -496,7 +494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "TEP4290_V2026",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
