Fixed typo WU5 and WU6 (no need to submit)

--- a/Warm_up_06_loops_and_iterations.ipynb
+++ b/Warm_up_06_loops_and_iterations.ipynb
@@ -9,7 +9,7 @@
     "- https://www.py4e.com/lessons/loops and \n",
     "- https://github.com/jakevdp/WhirlwindTourOfPython/blob/master/10-Iterators.ipynb\n",
     "\n",
-    "You will perform some basic operations that are designed to help you to get comforable with loops and iterations in Python. The exercise is pass/fail.\n",
+    "You will perform some basic operations that are designed to help you to get comforable with loops and iterations in Python.\n",
     "\n",
     "Good luck!"
    ]
